--- a/styles.css
+++ b/styles.css
@@ -73,10 +73,11 @@ h2 {
     justify-content: center;
     font-size: 18px;
     font-weight: bold;
+    margin-bottom: 12px;
 }
 
 .gamesNumber {
-    font-size: 36px;
+    font-size: 28px;
 }
 
 input {
