--- a/styles.css
+++ b/styles.css
@@ -59,10 +59,27 @@ h2 {
     text-align: center;
 }
 
+#simulation {
+    text-align: left;
+    margin-bottom: 16px;
+}
+
+.nav {
+    display: flex;
+    gap: 20px;
+    margin-top: 16px;
+    justify-content: center;
+}
+
+a {
+    color: #d3d3d3;
+    font-size: 18px;
+}
+
 .separator {
     border-top: 1px solid #d3d3d3;
-    width: 80%;
-    margin: 16px auto;
+    width: 100%;
+    margin: 32px auto;
 }
 
 .results {
